Change log for mrcfile
======================

Version 1.4.1 (2022-07-12)
--------------------------

* Add file names to mrcfile-header output
* Add file names and a success message for valid files to the output of the
  validation functions (mrcfile-validate command and the validate() method)
* Add support for numpy 1.23 and Python 3.10 and 3.11

Version 1.4.0 (2022-07-02)
--------------------------

* Change default MRC format version from 20140 to 20141 and update validation
  to allow files with both format numbers as valid.
* Add mrcfile.read() and mrcfile.write() functions for quick one-off accesses
  to the MRC data array without needing to keep an MrcFile object open (thanks
  to Alister Burt).
* Allow the extended header to be set when creating a file with
  mrcfile.new_mmap() (thanks to James Parkhurst).
* Add file size checks to avoid allocating huge amounts of memory when opening
  corrupt or non-MRC files in permissive mode.
* Update numpy and Python version compatibility to drop support for Python
  3.4 and 3.5 and numpy < 1.16, and add support for numpy 1.21 and 1.22.
* Fix bug intepreting FEI extended headers on big-endian hardware.
* Documentation updates.

Version 1.3.0 (2021-02-18)
--------------------------

* Add support for the new proposed data mode 12 (numpy float16). Note that
  this causes a change in behaviour: previously float16 arrays would be
  widened to float32 and saved in mode 2; now they will be kept in float16 and
  saved in mode 12, which could be incompatible with other software.
* Issue Python warnings if NaN or infinite values are found when a new data
  array is passed to set_data() (or if update_header_stats() is called).
* Update numpy version compatibility to include numpy 1.20
* Minor updates to documentation

Version 1.2.0 (2020-11-30)
--------------------------

* mrcfile is now available through conda-forge (thanks to Billy Poon)
* Add support for FEI2-format extended headers (thanks to Michael Saur)